--- a/graphics/styles/cmps/main-list.css
+++ b/graphics/styles/cmps/main-list.css
@@ -1,8 +1,12 @@
-.list ul li{
-    list-style-type: none;
-    border: 1px black solid;
-    display: flex;  
-    justify-content: space-between;
+.list {
+    width: 100%;
+    line-height: 2rem;
 }
 
-
+.list ul li {
+    list-style-type: none;
+    border-bottom: 1px black solid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
