--- a/graphics/styles/main.css
+++ b/graphics/styles/main.css
@@ -11,6 +11,7 @@
 @import 'pages/home-app.css';
 @import 'pages/email-app.css';
 @import 'pages/keep-app.css';
+@import 'pages/email-preview.css';
 
 /* MAIN COMPONENTS */
 @import 'cmps/main-list.css';
@@ -20,6 +21,7 @@
 @import 'cmps/email-header.css';
 @import 'cmps/screen.css';
 @import 'cmps/footer.css';
+@import 'cmps/email-side-menu.css';
 
 
 /* NOTES COMPONENTS */
