--- a/graphics/styles/pages/email-preview.css
+++ b/graphics/styles/pages/email-preview.css
@@ -1,14 +1,15 @@
-.preview{
-    width: 500px;
-    height: 500px;
+.preview {
+
     background-color: white;
     /* z-index: 10; */
     /* margin: 1rem auto; */
+
     width: 100%;
     height: 90vh;
     position: absolute;
     top: 5vh;
     left: 0;
     text-align: center;
-}
+    padding: 0 5rem;
 
+}
