--- a/graphics/styles/basic/layout.css
+++ b/graphics/styles/basic/layout.css
@@ -2,7 +2,7 @@
 /* LAYOUTS*/
 .main-layout{
     min-height: 95vh;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
 }
 
 
