--- a/graphics/styles/setup/vars.css
+++ b/graphics/styles/setup/vars.css
@@ -1,6 +1,6 @@
 :root {
     /* p */
-    --clr1: #606060;
+    --clr1: rgb(86, 127, 204);
     /* card h */
     --clr2: #4F4E4E;
     /* nav background */
