--- a/graphics/styles/cmps/email-compose.css
+++ b/graphics/styles/cmps/email-compose.css
@@ -1,4 +1,4 @@
-.compose-icon{
+.compose-icon {
     position: absolute;
     bottom: 8vh;
     left: 2rem;
@@ -6,16 +6,22 @@
     cursor: pointer;
 }
 
-.compose-icon::before{
+.compose-icon::before {
     content: "\2b";
     font-size: 3rem;
     /* border: 1px black solid;
     border-radius: 50%; */
     color: rgb(86, 127, 204);
-  
+
 }
 
-.new-email{
+.new-email>* {
+    /* border: 1px red solid; */
+}
+
+.new-email {
+
+
     z-index: 20;
     position: absolute;
     bottom: 5vh;
@@ -24,21 +30,24 @@
     height: 400px;
     border: 1px solid black;
     background-color: white;
-    
-    
+
+
 }
 
-.new-email a{
+.new-email a {
     text-decoration: none;
 }
 
-.new-email .header{
+.new-email .header {
+    color: white;
+    height: 0px;
+    padding: 1rem;
     background-color: #404040;
     display: flex;
     justify-content: space-between;
 }
 
-.new-email .header .action-btns{
+.new-email .header .action-btns {
     display: flex;
     align-items: center;
     width: 3rem;
@@ -47,28 +56,60 @@
     font-family: fa-solid;
 }
 
-.new-email .header .action-btns > *{
+.new-email .header .action-btns>* {
     cursor: pointer;
 }
 
-.new-email span::placeholder{
+.new-email .inputs input,
+.new-email .inputs textarea {
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+    padding-inline-start: 1rem;
+}
+
+.new-email .inputs input {
+    border-bottom: 1px #f1f3f4 solid;
+    width: 100%;
+}
+
+.new-email .inputs input::placeholder {
     color: #969696;
+    font-size: 1rem;
 }
 
-.new-email .body{
-
+.new-email .inputs textarea {
+    /* border: 1px black solid; */
+    height: 100%;
 }
 
-.new-email .footer{
+.new-email .body {}
 
+.new-email .bottom.action-btns {
+    position: absolute;
+    bottom: 0;
+    /* border: 1px black solid; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.new-email .send{
+.new-email .action-btns .send {
     background-color: #1a73e8;
+    border: none;
+    color: white;
     display: flex;
     justify-content: space-between;
     border-radius: 3px;
+    margin-inline-start: 1rem;
+  
+    min-width: 6rem;
+    padding: 0 0.5rem;
+
 }
 
-
-
+.new-email .action-btns .send span:last-child::before{
+    font-family: fa-solid;
+    content: "\f0d7";
+}
