--- a/graphics/styles/setup/typography.css
+++ b/graphics/styles/setup/typography.css
@@ -14,3 +14,8 @@
     font-family: fa-solid;
     src: url(../../fonts/fa/fa-solid-900.ttf);
 }
+
+@font-face{
+    font-family: fa-regular;
+    src: url(../../fonts/fa/fa-regular-400.ttf);
+}
