--- a/graphics/styles/cmps/note-list.css
+++ b/graphics/styles/cmps/note-list.css
@@ -1,32 +1,15 @@
 .note-txt {
-	/* min-width: 400px; */
 	max-width: 300px;
-	background-color: rgb(172, 144, 144);
-	/* max-height: 600px; */
-	/* margin: 0.8rem; */
-	/* padding: 5px; */
+	background-color: rgb(237, 217, 217);
 }
 
 textarea {
 	width: 100%;
-	height: 60px;
+	/* height: 60px; */
 	padding: 15px;
 	outline: none;
 	resize: none;
 	border-radius: 10px;
-}
-.note-list {
-	border: 1px black solid;
-	display: flex;
-	padding: 10px;
-	flex-wrap: wrap;
-	/* flex-direction: column; */
-	width: fit-content;
-	margin: 0 auto;
-	width: 80%;
-}
-.note {
-	padding: 10px;
 }
 .note-container {
 	border: 1px black solid;
@@ -36,4 +19,14 @@ textarea {
 .note-photo {
 	width: fit-content;
 	max-width: 300px;
+}
+.note-list-container {
+	/* width: 10%; */
+	display: flex;
+	flex-direction: column;
+}
+* {
+	border: 1px black solid;
+	/* background-color: rgba(134, 207, 67, 0.37); */
+	outline: 5px rgb(171, 36, 36) + solid;
 }
