--- a/graphics/styles/cmps/note-list.css
+++ b/graphics/styles/cmps/note-list.css
@@ -1,32 +1,83 @@
 .note-txt {
 	max-width: 300px;
-	background-color: rgb(237, 217, 217);
+	background-color: rgb(255, 255, 255);
 }
 
 textarea {
 	width: 100%;
-	/* height: 60px; */
 	padding: 15px;
 	outline: none;
 	resize: none;
 	border-radius: 10px;
 }
 .note-container {
-	border: 1px black solid;
-	max-width: 300px;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	max-width: 420px;
 	text-align: center;
+	background-color: rgba(110, 110, 110, 0.421);
+	border-radius: 15px;
+	padding: 20px;
+	padding-top: 20px;
+	padding-left: 20px;
 }
 .note-photo {
-	width: fit-content;
-	max-width: 300px;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
 }
-.note-list-container {
-	/* width: 10%; */
+
+.list {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-auto-rows: minmax(min-content, min-content);
+	grid-gap: 10px;
+
+	padding: 3%;
+}
+.note-add {
 	display: flex;
-	flex-direction: column;
+	height: 100%;
+	padding: 1em;
+	background-color: rgba(207, 207, 207, 0.464);
 }
-* {
-	border: 1px black solid;
-	/* background-color: rgba(134, 207, 67, 0.37); */
-	outline: 5px rgb(171, 36, 36) + solid;
+.note-add * > button {
+	display: inline-block;
+	margin: 3px;
+	border-radius: 4px;
+	background-color: #4f4e4e;
+	border: none;
+	color: #a8a8a8;
+	text-align: center;
+	font-size: 1rem;
+	padding: 0.3rem;
+	transition: all 0ss;
+	cursor: pointer;
+}
+
+.note-add input {
+}
+.list * > button {
+	display: inline-block;
+	margin: 3px;
+	border-radius: 4px;
+	background-color: #b4b4b4;
+	border: none;
+	color: #0b0404;
+	text-align: center;
+	font-size: 1rem;
+	padding: 0.3rem;
+	transition: all 0ss;
+	cursor: pointer;
+	margin-bottom: 0.7em;
+	margin-top: 0.25em;
+}
+.list * > input {
+	width: 100%;
+	font-size: 1rem;
+	padding: 0.5em;
+}
+.buttons {
+	display: flex;
 }
