--- a/graphics/styles/main.css
+++ b/graphics/styles/main.css
@@ -14,6 +14,7 @@
 @import 'pages/email-details.css';
 
 /* MAIN COMPONENTS */
+@import 'cmps/email-drafts.css';
 @import 'cmps/main-list.css';
 @import 'cmps/main-item.css';
 @import 'cmps/email-compose.css';
