--- a/graphics/styles/cmps/email-compose.css
+++ b/graphics/styles/cmps/email-compose.css
@@ -1,18 +1,27 @@
 .compose-icon {
     position: absolute;
-    top: 28vh;
-    left: 1rem;
+    top: 5.6vh;
+    left: 0.2rem;
     font-family: fa-solid;
     cursor: pointer;
     z-index: 10;
+    border: 1px black solid;
+    width: 5rem;
+    height: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    background-color: var(--clr1);
+    
 }
 
 .compose-icon::before {
     content: "\2b";
-    font-size: 3rem;
+    font-size: 1.5rem;
     /* border: 1px black solid;
     border-radius: 50%; */
-    color: rgb(86, 127, 204);
+    color: rgb(255, 223, 162);
 
 }
 
