accept, drafts are not going to trash

--- a/graphics/styles/cmps/email-compose.css
+++ b/graphics/styles/cmps/email-compose.css
@@ -123,3 +123,11 @@
     font-family: fa-solid;
     content: "\f0d7";
 }
+
+.tst{
+    z-index: 50;
+    border: 1px red solid;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+}
