--- a/graphics/styles/cmps/main-list.css
+++ b/graphics/styles/cmps/main-list.css
@@ -3,14 +3,22 @@
     line-height: 2rem;
     /* padding-inline-start: 0.2rem; */
     margin-top: 1rem;
+
+    
 }
 
 .email-list ul.mail li {
+    border: 1px red solid;
     border-bottom: 1px rgb(238, 237, 237) solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+
+
+
+
 
 .email-list a {
     /* border: 1px black solid; */
@@ -78,6 +86,6 @@
     opacity: 100;
 }
 
-.email-list .read{
+.email-list .unread{
     font-weight: 600;
 }
