--- a/graphics/styles/cmps/email-side-menu.css
+++ b/graphics/styles/cmps/email-side-menu.css
@@ -7,7 +7,7 @@
     transition: 0.2s;
     width: 1.4em;
     overflow-x: hidden;
-    margin-inline-start: 0.7rem;
+    /* margin-inline-start: 0.7rem; */
     margin-block-start: 2.2rem;
 }
 
