--- a/graphics/styles/cmps/main-list.css
+++ b/graphics/styles/cmps/main-list.css
@@ -7,16 +7,39 @@
     
 }
 
+
+
 .email-list ul.mail li {
-    border: 1px red solid;
     border-bottom: 1px rgb(238, 237, 237) solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+}
+
+.email-list .email-info{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;    
 }
 
 
 
+.email-list ul.mail li .fname{
+    
+}
+
+.email-list ul.mail li .subject{
+    /* position: relative; */
+    /* right: 2rem; */
+}
+
+
+.email-list ul.mail li .body{
+    /* position: relative; */
+    /* right: 2rem;  */
+    color: gray;
+}
 
 
 
@@ -88,4 +111,23 @@
 
 .email-list .unread{
     font-weight: 600;
+}
+
+.email-list .trash{
+    font-size: 1rem;
+    border: none;
+    background: none;
+	color: inherit;
+	padding: 0;
+	cursor: pointer;
+	outline: inherit;
+    background-color: rgba(255, 255, 255, 0);
+
+}
+
+.email-list .trash::before{
+    font-family: fa-regular;
+    content: "\f2ed";
+  
+    
 }
